--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,7 +2,9 @@ name: pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - 'cm-**'
   pull_request:
     branches: [ main ]
 
