--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "10.26.2",
         "laravel/sanctum": "3.3.1",
         "laravel/tinker": "2.8.2",
-        "livewire/livewire": "3.0.5"
+        "livewire/livewire": "3.0.5",
+        "ext-fileinfo": "*"
     },
     "require-dev": {
         "fakerphp/faker": "1.23.0",
