--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
     },
     "require-dev": {
         "fakerphp/faker": "1.23.1",
+        "larastan/larastan": "^2.9",
         "laravel/breeze": "1.28.2",
         "laravel/pint": "1.13.11",
         "laravel/sail": "1.27.4",
         "mockery/mockery": "1.6.7",
         "nunomaduro/collision": "7.10.0",
-        "nunomaduro/larastan": "2.9.0",
         "phpunit/phpunit": "10.5.10",
         "spatie/laravel-ignition": "2.4.2"
     },
