--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "@tailwindcss/forms": "0.5.7",
         "alpinejs": "3.14.1",
         "autoprefixer": "10.4.19",
-        "axios": "1.7.2",
+        "axios": "^1.7.9",
         "laravel-mix": "6.0.49",
         "postcss": "8.4.38",
         "tailwindcss": "3.4.4"
