--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "larastan/larastan": "2.9.7",
         "laravel/breeze": "^2.0",
         "laravel/pint": "1.16.1",
-        "laravel/sail": "1.30.0",
+        "laravel/sail": "v1.45",
         "mockery/mockery": "1.6.12",
         "nunomaduro/collision": "^8.1",
         "phpunit/phpunit": "10.5.24",
