--- a/composer.json
+++ b/composer.json
@@ -5,24 +5,24 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
-        "guzzlehttp/guzzle": "7.8.1",
-        "laravel/framework": "^11.0",
+        "php": "^8.3",
+        "guzzlehttp/guzzle": "^7.0",
+        "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "2.9.0",
-        "livewire/livewire": "^3.4",
+        "laravel/tinker": "^v2.0",
+        "livewire/livewire": "^3.0",
         "ext-fileinfo": "*"
     },
     "require-dev": {
         "fakerphp/faker": "1.23.1",
-        "larastan/larastan": "2.9.7",
+        "larastan/larastan": "^3.0",
         "laravel/breeze": "^2.0",
         "laravel/pint": "1.16.1",
-        "laravel/sail": "v1.45",
+        "laravel/sail": "^v1.0",
         "mockery/mockery": "1.6.12",
-        "nunomaduro/collision": "^8.1",
-        "phpunit/phpunit": "10.5.24",
-        "spatie/laravel-ignition": "2.8.0"
+        "nunomaduro/collision": "^8.0",
+        "phpunit/phpunit": "^11.0",
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
